syntax = "proto3";

package pb;

service Manager {
	rpc NodeNotifyRPC (NodeNotifyRequest) returns (NodeNotifyResponse) {}
}

message NodeNotifyRequest {
	string event = 1;
	string volumeName = 2;
}

message NodeNotifyResponse {
	string result = 1;
}
